cha-pre-live-flux2/cha-eks-5b/icis-services/icis-gitlab-runner/network-policy-apps.yaml
####################################################
## Allow ingress from icis-gitlab-runner and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-icis-gitlab-runner
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: icis-gitlab-runner
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

###################################
## Allow egress from icis-gitlab-runner ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-icis-gitlab-runner
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: icis-gitlab-runner

#########################################
## Allow gitlab b2b egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-gitlab-b2b
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
    - ports:
        - protocol: TCP
          port: 22
      to:
        - ipBlock:
            cidr: 10.55.32.232/32
  policyTypes:
    - Ingress
    - Egress

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

#########################################
## Allow genesis components egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-genesis-servers
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.32.0/21
    ports:
    - port: 8050
      protocol: TCP
    - port: 8051
      protocol: TCP
    - port: 8052
      protocol: TCP
    - port: 8053
      protocol: TCP
    - port: 8054
      protocol: TCP
    - port: 8055
      protocol: TCP
    - port: 8056
      protocol: TCP
    - port: 8057
      protocol: TCP
    - port: 8058
      protocol: TCP

#####################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-nexus-cha
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.32.0/22
    ports:
    - protocol: TCP
      port: 8001

#################################################
## Allow traffic to checkmarx  ##
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-checkmarx
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.16.33/32
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 80
      
#################################################
## Allow traffic to mongo db atlas peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-mongodb
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.248.0/21
    ports:
    - port: 27015
      protocol: TCP
    - port: 27016
      protocol: TCP
    - port: 27017
      protocol: TCP
    - port: 27015
      protocol: UDP
    - port: 27016
      protocol: UDP
    - port: 27017
      protocol: UDP

##################################################
## Allow traffic to confluent cloud peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-confluent
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.0/16
    ports:
    - port: 443
      protocol: TCP
    - port: 9092
      protocol: TCP

#################################################
## Allow traffic to CHA QHS CIDR for CHA Consul  ##
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-cha-consul
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.32.0/24
    ports:
    - protocol: TCP
      port: 8079

#################################################
## Allow traffic to port 8080 for event processor of sbnews-* namespace for smoke tests ##
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-sbnews-service
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 8080
      protocol: TCP

#################################################
## Allow traffic to port 1433 of sql servers ##
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-sqldb
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 1433
      protocol: TCP

---
##################################################
## Allow external http traffic egress to CHA IDDN, puppet r10k  ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-iddn-cha
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.32.0/22
    ports:
    - port: 9100
      protocol: TCP
    - port: 9000
      protocol: TCP
    - port: 8076
      protocol: TCP

---
##################################################
## Allow external http traffic egress to CHA Apache barclay servers  ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-barclay-cha
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.36.0/23
    ports:
    - port: 22
      protocol: TCP
---
#########################################
## Allow connections to Postgres and Mariadb databases in DevEnv-CHA ##
 

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-rds-databases
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.36.0/22
    ports:
    - port: 5432
      protocol: TCP
    - port: 3306
      protocol: TCP
#################################################
## Allow traffic to confluence  ##
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-confluence
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.38.0/24
    ports:
    - protocol: TCP
      port: 443
##################################################################
## Allow traffic to gitlab.cha.rbxd.ds  ##
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-gitlab
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.39.173/32
    - ipBlock:
        cidr: 10.52.38.72/32
    ports:
    - protocol: TCP
      port: 22

---
#########################################
## Allow Egress Traffic for Cypress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-cypress
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.38.0/24
    ports:
    - protocol: TCP
      port: 3128
  policyTypes:
    - Egress

---
#########################################
## Allow Ingress Traffic for Cypress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-cypress
  namespace: icis-gitlab-runner
spec:
  podSelector: {}
  ingress:
  - from:
    - ipBlock:
        cidr: 10.52.38.0/24
    ports:
    - protocol: TCP
      port: 3128
  policyTypes:
    - Ingress
